--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,19 @@ server:
   port: 8080
   servlet:
     context-path: /bootcamp
+
 spring:
-  datasouce:
-  driver-class-name: org.postgresql.Driver
-  url: jdbc:postgressql://localhost:5432/postgres
-jpa:
-  show-sql: true
-  database-platform: org.hibernate.dialect.PostgreSQLDialect
-  generate-ddl: true
-  hibernate:
-    ddl-aute: none
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: admin
+  jpa:
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    generate-ddl: false
+    hibernate:
+      ddl-auto: none
+
+application:
+  description: Projeto criado para o bootcamp DIO - Santander
